# boxboxai

./: .env.example  .gitignore  LICENSE  Makefile  README.md  langgraph.json
api/: openapi.yaml
architecture/diagram/: class_diagram.mermaid
architecture/erd/: overview.mermaid
backend/ai/crag_graph/: __init__.py
backend/deep_research_graph/: __init__.py
docs/: api_spec.md
infra/: docker-compose.yaml
templetes/: pyproject.toml
